IF(EMGU_CV_BUILD OR EMGU_CV_EXAMPLE_BUILD)

PROJECT(Emgu.CV.UI)

FILE(GLOB_RECURSE SRC_CV_UI RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cs")
SET(SRC_CV_UI ${SRC_CV_UI} ${CMAKE_CURRENT_SOURCE_DIR}/../CommonAssemblyInfo.cs)

GENERATE_DOCUMENT(${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME})
SIGN_ASSEMBLY(${CMAKE_CURRENT_SOURCE_DIR}/../Emgu.CV.snk)
ADD_CS_REFERENCES("${LIBRARY_OUTPUT_PATH}/Emgu.Util.dll;${LIBRARY_OUTPUT_PATH}/Emgu.CV.dll;System.Drawing.dll;System.Data.dll;System.Windows.Forms.dll;${LIBRARY_3RDPARTY_PATH}/ZedGraph.dll")

FILE(GLOB RESX_SRC 
   "${CMAKE_CURRENT_SOURCE_DIR}/*.resx" 
   "${CMAKE_CURRENT_SOURCE_DIR}/Properties/*.resx")
FOREACH (RESX ${RESX_SRC})
   STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/" "${PROJECT_NAME}." RESOURCES_NAME ${RESX})
   STRING(REPLACE ".resx" ".resources" RESOURCES_NAME ${RESOURCES_NAME})
   STRING(REPLACE "/" "." RESOURCES_NAME ${RESOURCES_NAME})
   ADD_CS_RESOURCES(${RESX} ${RESOURCES_NAME})
ENDFOREACH(RESX)

ADD_CS_FILE_TO_DEPLOY(${CMAKE_CURRENT_SOURCE_DIR}/../lib/3rdParty/ZedGraph.dll)
COMPILE_CS(${PROJECT_NAME} "library" "${SRC_CV_UI}" ALL)

ADD_DEPENDENCIES(${PROJECT_NAME} Emgu.CV Emgu.Util)
INSTALL(
FILES 
${CMAKE_CURRENT_SOURCE_DIR}/../lib/3rdParty/ZedGraph.dll
${CMAKE_CURRENT_SOURCE_DIR}/../lib/3rdParty/ZedGraph.license.txt
${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}.dll 
${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}.xml
DESTINATION ${CPACK_PACKAGE_CLI_FOLDER}
COMPONENT emgucv_binary)

IF(WIN32)
INSTALL(
  DIRECTORY
  ${CMAKE_CURRENT_SOURCE_DIR}
  DESTINATION ./
    COMPONENT emgucv_source
  FILES_MATCHING 
  PATTERN "*.cs"
  PATTERN "*.csproj"
  PATTERN "*.resx"
  PATTERN ".svn" EXCLUDE
  PATTERN "obj" EXCLUDE
  PATTERN "CMakeFiles" EXCLUDE
  PATTERN "${PROJECT_NAME}.dir" EXCLUDE
)
ENDIF()

ENDIF()