# --------------------------------------------------------
#  Copyright (C) 2004-2019 by EMGU Corporation. All rights reserved.
# --------------------------------------------------------

IF(EMGU_CV_BUILD OR EMGU_CV_EXAMPLE_BUILD)

#MESSAGE(STATUS "HAVE_ANDROID_ALL_ARCH: ${HAVE_ANDROID_ALL_ARCH}")  
#MESSAGE(STATUS "WIN32: ${WIN32}")  
IF(HAVE_ANDROID_ALL_ARCH)
  PROJECT(Emgu.CV.World.Android)
  #MESSAGE(STATUS "Adding Emgu.CV.World.Android project.")  
  BUILD_CSPROJ(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/Emgu.CV.World.Android.csproj" "" ALL)
  INSTALL(
	FILES 
	${CMAKE_CURRENT_SOURCE_DIR}/../libs/${PROJECT_NAME}.xml
	${CMAKE_CURRENT_SOURCE_DIR}/../libs/${PROJECT_NAME}.dll 
	DESTINATION ${CPACK_PACKAGE_CLI_FOLDER}
	COMPONENT emgucv_binary)
  ADD_DEPENDENCIES(${PROJECT_NAME} cvextern)
  if(ENABLE_SOLUTION_FOLDERS)
    set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "emgu")
  endif()
endif()

IF(APPLE AND (NOT IOS))
  PROJECT(Emgu.CV.World.Mac)
    #MESSAGE(STATUS "Compiles ${CMAKE_CURRENT_SOURCE_DIR}/Emgu.CV.World.Mac.csproj")
    BUILD_CSPROJ(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/Emgu.CV.World.Mac.csproj" "" ALL)
    INSTALL(
      FILES 
      ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}.xml
      ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}.dll 
      DESTINATION ${CPACK_PACKAGE_CLI_FOLDER}
      COMPONENT emgucv_binary)	  
    ADD_DEPENDENCIES(${PROJECT_NAME} cvextern)
ENDIF()


  IF(WIN32 OR APPLE OR ANDROID)
     INSTALL(
	  DIRECTORY
	  ${CMAKE_CURRENT_SOURCE_DIR}
	  DESTINATION .
	  COMPONENT emgucv_source
	  FILES_MATCHING 
	  
	  PATTERN "*.cs"
	  PATTERN "*.resx"
	  PATTERN ".svn" EXCLUDE
	  PATTERN "obj" EXCLUDE
	  PATTERN "CMakeFiles" EXCLUDE
	  PATTERN "${PROJECT_NAME}.dir" EXCLUDE
	  )
     
    IF(HAVE_ANDROID)
           INSTALL(
	DIRECTORY
	${CMAKE_CURRENT_SOURCE_DIR}
	DESTINATION .
	COMPONENT emgucv_source
	FILES_MATCHING 
	PATTERN "*.Android.csproj"
	PATTERN ".svn" EXCLUDE
	PATTERN "obj" EXCLUDE
	PATTERN "CMakeFiles" EXCLUDE
	PATTERN "${PROJECT_NAME}.dir" EXCLUDE
	)
   ENDIF()
   IF(HAVE_IOS)
            #APPLE
      INSTALL(
	DIRECTORY
	${CMAKE_CURRENT_SOURCE_DIR}
	DESTINATION .
	COMPONENT emgucv_source
	FILES_MATCHING 
	PATTERN "${PROJECT_NAME}.IOS.csproj"
	PATTERN ".svn" EXCLUDE
	PATTERN "obj" EXCLUDE
	PATTERN "CMakeFiles" EXCLUDE
	PATTERN "${PROJECT_NAME}.dir" EXCLUDE
	)
   ENDIF()
   IF(HAVE_OSX)
	#APPLE
      INSTALL(
	DIRECTORY
	${CMAKE_CURRENT_SOURCE_DIR}
	DESTINATION .
	COMPONENT emgucv_source
	FILES_MATCHING 
	PATTERN "${PROJECT_NAME}.Mac.csproj"
	PATTERN ".svn" EXCLUDE
	PATTERN "obj" EXCLUDE
	PATTERN "CMakeFiles" EXCLUDE
	PATTERN "${PROJECT_NAME}.dir" EXCLUDE
	)   
   ENDIF()
   IF (HAVE_WINSTORE_81_X86 OR HAVE_WINSTORE_81_X64)
      	#Windows Store
	INSTALL(
	  DIRECTORY
	  ${CMAKE_CURRENT_SOURCE_DIR}
	  DESTINATION .
	  COMPONENT emgucv_source
	  FILES_MATCHING 
	  PATTERN "*.Store81.csproj"
	  PATTERN ".svn" EXCLUDE
	  PATTERN "obj" EXCLUDE
	  PATTERN "CMakeFiles" EXCLUDE
	  PATTERN "${PROJECT_NAME}.dir" EXCLUDE
	  )
   ENDIF()
   IF (HAVE_WINPHONE_81_X86 OR HAVE_WINPHONE_81_ARM)
      	#Windows Phone
	INSTALL(
	  DIRECTORY
	  ${CMAKE_CURRENT_SOURCE_DIR}
	  DESTINATION .
	  COMPONENT emgucv_source
	  FILES_MATCHING 
	  PATTERN "*.Phone81.csproj"
	  PATTERN ".svn" EXCLUDE
	  PATTERN "obj" EXCLUDE
	  PATTERN "CMakeFiles" EXCLUDE
	  PATTERN "${PROJECT_NAME}.dir" EXCLUDE
	  )
      ENDIF()

    IF(HAVE_WINDESKTOP_X86 OR HAVE_WINDESKTOP_X64)
       #Windows Desktop
	INSTALL(
	  DIRECTORY
	  ${CMAKE_CURRENT_SOURCE_DIR}
	  DESTINATION .
	  COMPONENT emgucv_source
	  FILES_MATCHING 
	  PATTERN "Emgu.CV.World.csproj"
	  PATTERN ".svn" EXCLUDE
	  PATTERN "obj" EXCLUDE
	  PATTERN "CMakeFiles" EXCLUDE
	  PATTERN "${PROJECT_NAME}.dir" EXCLUDE
	  )
	  
	#INSTALL(
	#  FILES 
	#  ${CMAKE_CURRENT_SOURCE_DIR}/NetStandard1_4/Emgu.CV.World.NetStandard1_4.csproj
	#  DESTINATION Emgu.CV.World/NetStandard1_4
	#  COMPONENT emgucv_source
	#  )
       ENDIF()
  ENDIF()  
  
  ADD_SUBDIRECTORY(NetStandard)
ENDIF()
