IF(EMGU_CV_BUILD OR EMGU_CV_EXAMPLE_BUILD)

PROJECT(LIB_3RD_PARTY)

INSTALL(
  FILES 
  ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/ZedGraph.dll 
  ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/ZedGraph.xml
  ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/ZedGraph.license.txt
  ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/zlib.net.dll
  ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/zlib.net.license.txt 
  DESTINATION ${CPACK_PACKAGE_CLI_FOLDER}
  COMPONENT binary)

ENDIF()